--- a/client/package.json
+++ b/client/package.json
@@ -20,12 +20,15 @@
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
+    "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.20.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
